@@ -1,5 +1,7 @@
 2018-01-11  Sam Varshavchik  <mrsam@courier-mta.com>
 
+	* Implement input_field_config.maximum_size.
+
 	* Implement synchronized list layout manager columns.
 
 2018-01-06  Sam Varshavchik  <mrsam@courier-mta.com>
